# qdrant-multivector

./: .dockerignore  .env.example  .gitignore  AUDIT_REPORT.md  Dockerfile  Makefile  README.md  article.md  benchmark_report.json  benchmark_report.md  docker-compose.yml  pyproject.toml  streamlit_app.py
data/: real_products.json
scratch/: copy_dynamic.py  copy_images.py  copy_obfuscated.py  inspect_siglip.py  test_claims.py  test_in_memory.py  validate_scores.py
scripts/: copy_screenshots.py  prepare_dataset.py
src/commerce_engine/: __init__.py  api.py  benchmark.py  cli.py  config.py  dataset.py  embeddings.py  filters.py  fixtures.py  ids.py  ingest.py  logging_config.py  models.py  qdrant_store.py  query.py  reviews.py  scoring.py  search.py  updates.py
tests/: conftest.py  test_api.py  test_core.py
tests/e2e/: __init__.py  test_api_e2e.py
tests/integration/: test_qdrant_integration.py
