[project]
name = "qdrant-multivector-commerce"
version = "0.1.0"
description = "Production-minded multi-aspect e-commerce semantic engine using Qdrant multivectors."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "typer>=0.12.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "qdrant-client>=1.15.0,<1.17.0",
    "fastembed>=0.4.0",
    "transformers>=4.45.0",
    "torch>=2.3.0",
    "pillow>=10.4.0",
    "numpy>=1.26.0",
    "rich>=13.7.0",
    "sentencepiece>=0.2.0",
    "protobuf>=4.25.0",
]


[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
]
ui = [
    "streamlit>=1.58.0",
]

[project.scripts]
engine = "commerce_engine.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "ARG"]
ignore = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
addopts = "-q"

[tool.hatch.build.targets.wheel]
packages = ["src/commerce_engine"]

[tool.hatch.build.targets.editable]
packages = ["src/commerce_engine"]
